<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--Scroll view-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Linear layout child of scroll view-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp">
            <!--Profile Image-->
            <ImageView
                android:id="@+id/profile"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/memoji_black"/>
            <!--Title-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/prateek_thakur"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
            <!--subtitle-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/android_ios"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--Introduction-->
            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@color/black" />
            <!--Card layout-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My skills"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:backgroundTint="@color/levender"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/android_logo_bw"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:text="Android"
                                android:gravity="center"/>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:progress="50"
                                android:progressTint="@color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:backgroundTint="@color/levender"
                        android:layout_marginStart="20dp"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/kotlin_logo_bw" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:text="Kotlin ready"
                                android:gravity="center"/>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:progress="60"
                                android:progressTint="@color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:backgroundTint="@color/levender"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/java_logo_bw"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Java ready"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:progress="70"
                                android:progressTint="@color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:backgroundTint="@color/levender"
                        android:layout_marginStart="20dp"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/apple_logo_bw"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="IOS"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:progress="10"
                                android:progressTint="@color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
            <!--End of cards-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <!--Project Button-->
                <Button
                    android:id="@+id/my_projects"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/black"
                    android:text="@string/my_projects"/>
                <!--Achievement Button-->
                <Button
                    android:id="@+id/achivements"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/my_achievement"
                    android:textColor="@color/black" />
            </LinearLayout>
            <!--Start of experience section-->
            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_gravity="center"
                app:cardCornerRadius="18dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_gravity="center">
                    <!--Each element-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/mark_logo_black"/>
                        <TextView
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2+ Year experience"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/mark_logo_black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Worked on 10+ projects"
                            android:layout_marginStart="5dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/mark_logo_black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="Certified developer"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!--End of experience section-->

            <!--Logos-->
            <!--
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/android_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/kotlin_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/apple_logo_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about" />
            </LinearLayout>
            -->
            <!--End of logos-->
            <!--Contact links-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Let's get connected"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/github_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/github_button_logo" />
                <ImageView
                    android:id="@+id/instagram_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/instagram_logo" />
                <ImageView
                    android:id="@+id/linkedin_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/linkedin_logo" />
                <ImageView
                    android:id="@+id/email"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/email_logo_hollow" />
            </LinearLayout>
            <!--End of Contact link section-->
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>